MyDemoOrg/force-app/main/default/objects/signature__EmailLog__c/signature__EmailLog__c.object-meta.xml
<CustomObject>
    <description>Logs of Emails Received (and Sent in the future)</description>
    <label>ß Email Log</label>
    <nameField>
        <displayFormat>E{000000}</displayFormat>
        <label>E#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>