MyDemoOrg/force-app/main/default/objects/signature__EmailLog__c/fields/signature__Body__c.field-meta.xml
<CustomField>
    <fullName>signature__Body__c</fullName>
    <label>Body</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>