MyDemoOrg/force-app/main/default/objects/signature__EmailLog__c/fields/signature__From__c.field-meta.xml
<CustomField>
    <fullName>signature__From__c</fullName>
    <label>From</label>
    <type>Email</type>
</CustomField>