MyDemoOrg/force-app/main/default/objects/signature__EmailLog__c/fields/signature__Status__c.field-meta.xml
<CustomField>
    <fullName>signature__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>