MyDemoOrg/force-app/main/default/objects/signature__EmailLog__c/fields/signature__Subject__c.field-meta.xml
<CustomField>
    <fullName>signature__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>