MyDemoOrg/force-app/main/default/objects/signature__EmailLog__c/listViews/signature__All.listView-meta.xml
<ListView>
    <fullName>signature__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>